--- a/package.json
+++ b/package.json
@@ -46,11 +46,14 @@
     "concurrently": "^9.2.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.20.1",
+    "globals": "^16.4.0",
+    "jiti": "^2.5.1",
     "nodemon": "^3.1.10",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.3",
     "typescript": "~5.3.3",
+    "typescript-eslint": "^8.44.0",
     "unplugin-vue-dev-locator": "^1.0.0",
     "vite": "^5.0.12",
     "vite-plugin-trae-solo-badge": "^1.0.0",
